--- a/src/feature/homepage/component/featured-product/styles.module.scss
+++ b/src/feature/homepage/component/featured-product/styles.module.scss
@@ -1,7 +1,57 @@
-// background-image: url("../../../../assest/image/Group\ 1000005944.svg");
-// //   background-position: center;
-// //   background-size: cover;
-//   background-repeat: no-repeat;
+// .content {
+//   width: 100%;
+//   position: relative;
+//   padding-bottom: 6rem;
+//   transform: translateX(100%);
+//   opacity: 0;
+//   transition: transform 0.8s ease-in-out, opacity 0.8s ease-in-out;
+
+//   &.slideIn {
+//     transform: translateX(0%);
+//     opacity: 1;
+//   }
+//   @media (max-width: 768px) {
+//     padding-bottom: 2rem;
+//     height: 146px;
+//   }
+
+//   .rotate {
+//     position: absolute;
+//     z-index: -1;
+//     right: 0;
+//     top: 80px;
+//     @media (max-width: 768px) {
+//       // width: 225px;
+//       // top: 0;
+//       display: none;
+//     }
+//   }
+//   .flx {
+//     width: 100%;
+//     display: flex;
+//     gap: 10px;
+//     overflow-x: auto;
+//     scroll-snap-type: x mandatory;
+//     scrollbar-width: none;
+//     -ms-overflow-style: none;
+//     margin-bottom: 20px;
+//     .image {
+//       width: 100%;
+//       height: 100%;
+
+//       img {
+//         object-fit: cover;
+//         width: 255px;
+//         height: 423px;
+//         border-radius: 15px;
+//         @media (max-width: 768px) {
+//           width: 100%;
+//           height: 120px;
+//         }
+//       }
+//     }
+//   }
+// }
 
 .content {
   width: 100%;
@@ -15,11 +65,11 @@
     transform: translateX(0%);
     opacity: 1;
   }
+
   @media (max-width: 768px) {
     padding-bottom: 2rem;
     height: 146px;
   }
-
 
   .rotate {
     position: absolute;
@@ -27,34 +77,61 @@
     right: 0;
     top: 80px;
     @media (max-width: 768px) {
-      // width: 225px;
-      // top: 0;
       display: none;
     }
   }
-  .flx {
-    width: 100%;
-    display: flex;
-    gap: 10px;
-    overflow-x: auto;
-    scroll-snap-type: x mandatory;
-    scrollbar-width: none;
-    -ms-overflow-style: none;
-    margin-bottom: 20px;
-    .image {
-      width: 100%;
-      height: 100%;
+}
 
-      img {
-        object-fit: cover;
-        width: 255px;
-        height: 423px;
-        border-radius: 15px;
-        @media (max-width: 768px) {
-          width: 100%;
-          height: 120px;
-        }
-      }
+.carousel {
+  display: flex;
+  animation: scroll 30s linear infinite;
+  gap: 20px;
+  perspective: 1200px;
+  width: fit-content;
+  margin-top: 2rem;
+
+  @media (max-width: 768px) {
+    // animation: none;
+    // overflow-x: auto;
+    // scroll-snap-type: x mandatory;
+    // scrollbar-width: none;
+    // -ms-overflow-style: none;
+  }
+}
+
+.card {
+  flex: 0 0 auto;
+  transform-style: preserve-3d;
+  animation: tilt 5s ease-in-out infinite alternate;
+  scroll-snap-align: center;
+
+  img {
+    width: 255px;
+    height: 423px;
+    object-fit: cover;
+    border-radius: 15px;
+
+    @media (max-width: 768px) {
+      width: 75px;
+      height: 120px;
     }
+  }
+}
+
+@keyframes scroll {
+  0% {
+    transform: translateX(0%);
+  }
+  100% {
+    transform: translateX(-50%);
+  }
+}
+
+@keyframes tilt {
+  0% {
+    transform: perspective(1000px) rotateY(8deg);
+  }
+  100% {
+    transform: perspective(1000px) rotateY(-8deg);
   }
 }
