--- a/src/feature/homepage/component/footer/styles.module.scss
+++ b/src/feature/homepage/component/footer/styles.module.scss
@@ -18,6 +18,8 @@
     justify-content: center;
     @media (max-width: 768px) {
       height: 209px;
+      padding-top: 1em;
+      padding-bottom: 35px;
     }
     .center_align {
       display: flex;
@@ -104,12 +106,7 @@
     height: 229px;
     width: 100%;
     display: flex;
-    // align-items: center;
-    padding-left: 20px;
-    padding-right: 20px;
-    // justify-content: center;
-    padding-top: 27px;
-    padding-bottom: 27px;
+    padding: 27px 20px;
     flex-direction: column;
     gap: 40px;
     @media (max-width: 768px) {
@@ -123,24 +120,21 @@
       flex-direction: column;
       gap: 12px;
       @media (max-width: 768px) {
-        flex-direction: row;
+        // flex-direction: row;
       }
       .flx {
         display: flex;
         align-items: center;
         justify-content: space-between;
-        .fnt {
-          @media (max-width: 768px) {
-            width: 100%;
-            height: 50px;
-          }
-        }
+
         @media (max-width: 768px) {
           width: 100%;
+          align-items: flex-start;
           flex-direction: column;
           gap: 24px;
-          padding-bottom: 70px;
+          padding-bottom: 4em;
           border-bottom: 1px solid #fff;
+          padding-left: 18px;
         }
         .icons {
           display: none;
@@ -155,6 +149,7 @@
         .input {
           position: relative;
           @media (max-width: 768px) {
+            display: none;
           }
           input {
             width: 353px;
@@ -168,21 +163,16 @@
             font-size: 14px;
             line-height: 28px;
             letter-spacing: 0%;
-            // text-align: center;
-            @media (max-width: 768px) {
-            }
           }
           .btn {
             position: absolute;
-            left: 253px;
+            left: 250px;
             top: 4.5px;
             padding: 6px 12px 6px 12px;
             width: 98px;
             height: 50px;
             background-color: #db5825;
             border-radius: 6px;
-            @media (max-width: 768px) {
-            }
             p {
               width: 74px;
               height: 29px;
@@ -194,8 +184,55 @@
               text-align: center;
               vertical-align: middle;
               color: #fff;
-              @media (max-width: 768px) {
-              }
+            }
+          }
+        }
+        .mobileInput {
+          display: none;
+          @media (max-width: 768px) {
+            display: block;
+            position: relative;
+            width: 100%;
+            height: auto;
+          }
+          input {
+            width: 320px;
+            border: 0.91px solid #d2d2d2;
+            outline: none;
+            height: 46px;
+            background-color: #33160a;
+            border-radius: 9.07px;
+            padding-left: 16px;
+            font-family: Open Sans;
+            font-weight: 400;
+            font-size: 12px;
+            line-height: 25.38px;
+            letter-spacing: 0%;
+            color: #a4a4a4;
+          }
+          .mobileBtn {
+            width: 77px;
+            height: 38px;
+            position: absolute;
+            left: 236px;
+            top: 3.5px;
+            background-color: #db5825;
+            padding: 6px 10px;
+            border-radius: 5.5px;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            h3 {
+              width: 55px;
+              height: 27px;
+              font-family: Open Sans;
+              font-weight: 400;
+              font-size: 12px;
+              line-height: 26.29px;
+              letter-spacing: 0%;
+              text-align: center;
+              color: #ffffff;
+              text-align: center;
             }
           }
         }
