--- a/src/feature/homepage/component/midsection/styles.module.scss
+++ b/src/feature/homepage/component/midsection/styles.module.scss
@@ -319,6 +319,7 @@
         width: 100%;
       }
       .content {
+        // width: 86px;
         width: 100%;
         height: 141px;
 
@@ -329,13 +330,13 @@
           width: 100%;
           height: 100%;
           img {
-            width: 85px;
+            width: 92px;
             height: 87px;
             object-fit: cover;
           }
         }
         .txtContent {
-          width: 86px;
+          width: 92px;
           // height: 54px;
           height: 100%;
           background-color: #fafafa;
@@ -343,12 +344,17 @@
           display: flex;
           flex-direction: column;
           justify-content: space-between;
+          padding-top: 0.5em;
           gap: 0px;
           padding-bottom: 10px;
           .upTxt {
             width: 100%;
             margin: 0 auto;
             height: auto;
+            display: flex;
+            flex-direction: column;
+            gap: 2px;
+
             h6 {
               font-family: Open Sans;
               font-weight: 400;
@@ -371,8 +377,8 @@
             margin: 0 auto;
             display: flex;
             flex-direction: column;
-            justify-content: space-between;
-            gap: 0px;
+            // justify-content: space-between;
+            gap: 2px;
 
             .btnView {
               display: flex;
@@ -504,11 +510,9 @@
     .mobileSlides {
       display: none;
       @media (max-width: 768px) {
-        display: grid;
-        grid-template-columns: repeat(3, 1fr);
-        grid-template-rows: repeat(1, 1fr);
-        // gap: 6px;
+        display: flex;
         justify-content: space-between;
+        width: 100%;
       }
       .wrapper {
         width: 100%;
@@ -518,10 +522,11 @@
         flex-direction: column;
         .imag {
           width: 100%;
-          height: 100%;
+          height: 170px;
           img {
-            width: auto;
-            height: 170px;
+            width: 125px;
+            height: 100%;
+            object-fit: cover;
           }
         }
         .texts {
@@ -547,7 +552,7 @@
             border: 1px solid #525150;
             display: flex;
             align-items: center;
-            outline: none;
+            justify-content: center;
             p {
               width: 58px;
               height: 11px;
